Enhancement for Frontend to consume API